<resources>
    <string name="app_name">毛豆创客</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">设置</string>
    <string name="title_activity_md_lab_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">通用</string>

    <string name="pref_title_display_name">昵称：</string>
    <string name="pref_default_display_name">毛豆创客</string>


    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">数据 &amp; 同步</string>

    <string name="pref_title_sync_frequency">采样频率</string>
    <string-array name="pref_sync_frequency_titles">
        <item>5 minutes</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>24 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>5</item>
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>1440</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_sync_end_time">查询结束时间</string>
    <string name="pref_default_end_time">1960-01-01 01:00:00</string>
    <string name="pref_title_sync_start_time">查询开始时间</string>
    <string name="pref_default_start_time">1960-01-01 00:00:00</string>
    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">通知</string>

    <string name="pref_title_new_message_notifications">消息通知</string>

    <string name="pref_title_ringtone">铃声</string>
    <string name="pref_ringtone_silent">静音</string>

    <string name="pref_title_vibrate">震动</string>
    <!-- Example settings for device -->
    <string name="pref_header_device">设备</string>
    <string name="pref_title_home">智慧家居</string>
    <string name="pref_switch_title_home">自动化</string>
    <string name="pref_text_home_humidity">空气湿度</string>
    <string name="pref_text_home_humidity_summary">湿度小于阈值加湿器工作(0-99%)</string>
    <string name="pref_title_weatherstation">数字气象站</string>
    <string name="pref_title_smartcar">智能动车</string>
    <string name="pref_title_farmer">智慧农业</string>
    <string name="pref_switch_title_farmer">自动化</string>
    <string name="pref_text_farmer_soil_humidity">土壤湿度</string>
    <string name="pref_text_farmer_soil_humidity_summary">湿度小于阈值水泵工作(0-99%)</string>
    <string name="pref_text_farmer_temperature">环境温度</string>
    <string name="pref_text_farmer_temperature_summary">温度小于阈值加热(0-99)</string>
    <string name="pref_title_robot">机器人</string>

    <string name="title_activity_device_detail">DeviceDetailActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mdlab_device_weatherstation">气象站</string>
    <string name="mdlab_device_smartcar">智能车</string>
    <string name="mdlab_device_smartfarmer">智慧农业</string>
    <string name="mdlab_device_smarthome">智能家居</string>
    <string name="mdlab_device_robot">舞蹈机器人</string>
    <string name="mdlab_device_connect">在线</string>
    <string name="mdlab_device_disconnect">离线</string>
    <string name="title_activity_settings">设置</string>
    <string name="light_hint">
        <font size="18">设置增温阈值</font>
    </string>
    <string name="pump_hint">
        <font size="18">设置灌溉阈值</font>
    </string>
    <string name="fan_hint">
        <font size="18">设置通风阈值</font>
    </string>
    <!-- robot control commond -->
    <string name="robot_cmd_reset">#1GC1</string>
    <string name="robot_cmd_xiaopingguoshang">#2GC1</string>
    <string name="robot_cmd_xiaopingguoxia">#3GC1</string>
    <string name="robot_cmd_taijiquan">#4GC1</string>
    <string name="robot_cmd_zhongguogongfu">#5GC1</string>
    <string name="robot_cmd_huanlewudaoshang">#6GC1</string>
    <string name="robot_cmd_huanlewudaoxia">#7GC1</string>
    <string name="robot_cmd_jixiewu">#8GC1</string>
    <string name="robot_cmd_gongfuxiongmao">#9GC1</string>
    <string name="robot_cmd_peidui">#10GC1</string>
    <string name="robot_cmd_baojin">#11GC1</string>
    <string name="robot_cmd_zhanqilai">#12GC1</string>
    <string name="robot_cmd_songkai">#13GC1</string>
    <string name="robot_cmd_zuozhuan">#14GC1</string>
    <string name="robot_cmd_youzhuan">#15GC1</string>
    <string name="robot_cmd_qianjin">#17GC1</string>
    <string name="robot_cmd_zuocebu">#19GC1</string>
    <string name="robot_cmd_youcebu">#20GC1</string>
    <string name="robot_cmd_houtui">#22GC1</string>
    <string name="robot_cmd_dunxia">#24GC1</string>

    <string name="title_activity_device_robot">DeviceRobotActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
