<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_title_home"
        android:key="pref_key_home_setting"
        android:layout="@layout/pref_category_device_home"

        >
        <SwitchPreference
            android:key="pref_key_home_auto_switch"
            android:title="@string/pref_switch_title_home"
            android:defaultValue="false"
            android:paddingLeft="6dp"
            android:textSize="@dimen/text_md"/>
        <EditTextPreference
            android:key="pref_key_home_humidity"
            android:title="@string/pref_text_home_humidity"
            android:summary="@string/pref_text_home_humidity_summary"
            android:defaultValue="20"
            android:singleLine="true"
            android:paddingLeft="6dp"
            android:textSize="@dimen/text_md"
            android:numeric="integer"
            android:maxLength="2"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_title_farmer"
        android:key="pref_key_farmer"
        android:layout="@layout/pref_category_device_farm">

        <SwitchPreference
            android:key="pref_key_farm_auto_switch"
            android:title="@string/pref_switch_title_farmer"
            android:defaultValue="false"
            android:paddingLeft="6dp"
            android:textSize="@dimen/text_md"/>
        <EditTextPreference
            android:key="pref_key_farm_humidity"
            android:title="@string/pref_text_farmer_soil_humidity"
            android:summary="@string/pref_text_farmer_soil_humidity_summary"
            android:defaultValue="20"
            android:singleLine="true"
            android:paddingLeft="6dp"
            android:textSize="@dimen/text_md"
            android:numeric="integer"
            android:maxLength="2"/>
        <EditTextPreference
            android:key="pref_key_farm_temperature"
            android:title="@string/pref_text_farmer_temperature"
            android:summary="@string/pref_text_farmer_temperature_summary"
            android:defaultValue="90"
            android:singleLine="true"
            android:paddingLeft="6dp"
            android:textSize="@dimen/text_md"
            android:numeric="integer"
            android:maxLength="2"/>
    </PreferenceCategory>

</PreferenceScreen>