<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="5"
        android:entries="@array/pref_sync_frequency_titles"
        android:entryValues="@array/pref_sync_frequency_values"
        android:key="sync_frequency"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_sync_frequency"/>
    <EditTextPreference
        android:defaultValue="@string/pref_default_start_time"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_sync_start_time"
        android:key="sync_start_time"/>
    <EditTextPreference
        android:defaultValue="@string/pref_default_end_time"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_sync_end_time"
        android:key="sync_end_time"/>


</PreferenceScreen>
